--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=rootuser
-spring.data.mongodb.password=rootpass
-spring.data.mongodb.database=db_productos
+spring.data.mongodb.username=${TG_MONGODB_USERNAME}
+spring.data.mongodb.password=${TG_MONGODB_PASSWORD}
+spring.data.mongodb.host= ${TG_MONGODB_HOST}
 spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
+spring.data.mongodb.database=db_clientes-${TG_CITY}
 spring.data.mongodb.auto-index-creation=true
-server.port=8085
-
+server.port=${TG_PORT}
