--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.data.mongodb.username=${TG_MONGODB_USERNAME}
 spring.data.mongodb.password=${TG_MONGODB_PASSWORD}
 spring.data.mongodb.host= ${TG_MONGODB_HOST}
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=db_clientes-${TG_CITY}
+spring.data.mongodb.database=db_productos-${TG_CITY}
 spring.data.mongodb.auto-index-creation=true
 server.port=${TG_PORT}
