--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=${TG_MONGODB_USERNAME}
+#spring.data.mongodb.username=${TG_MONGODB_USERNAME}
+spring.data.mongodb.username=rootadmin
 spring.data.mongodb.password=${TG_MONGODB_PASSWORD}
 spring.data.mongodb.host= ${TG_MONGODB_HOST}
 spring.data.mongodb.port=27017
